--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <div class="row">
                 <div class="col-sm-4"></div>
                 <div class="col-sm-4">
-                    <button type="button" id="beginBtn" class="btn btn-danger btn-lg">Look Alive</button>
+                    <button type="button" id="beginBtn" class="">Look Alive</button>
                 </div>
                 <div class="col-sm-4"></div>
             </div>
@@ -61,13 +61,10 @@
                 <div class="col-sm-4">
                     <img src="assets/images/drake.jpg" id="profileImg" class="animated flip" alt="Me">
 
-                    <video class="animated lightSpeedIn vid" controls autoplay>
+                    <video class="animated lightSpeedIn vid" autoplay>
                             <source src="assets/videos/Look_Alive.mp4" type="video/mp4">
                           </video>
                           
-                <div class="bottomVidDiv animated slideInRight"></div>
-                <div class="bottomVidDiv2 animated slideInLeft"></div>
-
                     <img src="assets/images/cross.png" class="animated wobble cross" alt="cross">
                 </div>
                 <div class="col-sm-4">
