--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <img src="assets/images/cross.png" class="animated wobble cross" alt="cross">
                 </div>
                 <div class="col-sm-4">
-                    <img src="assets/images/owl.png" class="owls animated fadeInUpBig rightOwl" alt="Drake Owl">
+                    <img src="assets/images/owl2.png" class="owls animated fadeInUpBig rightOwl" alt="Drake Owl">
                 </div>
             </div>
         </div>
