--- a/index.html
+++ b/index.html
@@ -5,76 +5,53 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Look Alive</title>
-    <!-- Skranji Font -->
-    <link href="https://fonts.googleapis.com/css?family=Skranji" rel="stylesheet">
+    <title>Twitch App</title>
     <!-- Bootstrap 3 -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u"
         crossorigin="anonymous">
-    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.12.9/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q"
-        crossorigin="anonymous"></script>
-    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    <!-- Bootstrap 4 -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" integrity="sha384-WskhaSGFgHYWDcbwN70/dfYBj47jz9qbsMId/iRN3ewGhXQFZCSftd1LZCfmhktB"
+        crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
         crossorigin="anonymous"></script>
     <!-- MyCSS -->
     <link rel="stylesheet" type="text/css" href="assets/css/style.css">
     <!-- JQuery -->
     <script src="http://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
         crossorigin="anonymous"></script>
-    <!-- Animate.CSS -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
     <!-- Ajax -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-    <!-- Moment -->
-    <script src="https://cdn.jsdelivr.net/momentjs/2.12.0/moment.min.js"></script>
-    <!-- Firebase -->
-    <script src="https://www.gstatic.com/firebasejs/4.13.0/firebase.js"></script>
     <!-- My JS -->
     <script src="assets/javascript/app.js"></script>
 </head>
 
 <body>
 
-    <div id="start">
 
-        <div class="container-fluid">
-            <div class="row">
-                <div class="col-sm-4"></div>
-                <div class="col-sm-4">
-                    <button type="button" id="beginBtn" class="">Look Alive</button>
+<div class="container">
+    <div class="row">
+        <div class="col-sm-4"></div>
+        <div class="col-sm-4">
+            <div class="row text-white bg-danger" style="margin-top: 20%;">
+                <div id="all" class="col-sm-4 banner"><h4 class="text-center mt-5">All</h4></div>
+                <div id="online" class="col-sm-4 banner"><h4 class="text-center mt-5">Online</h4></div>
+                <div id="offline" class="col-sm-4 banner"><h4 class="text-center mt-5">Offline</h4></div>
+
+                <form class="form-inline">
+                <label class="sr-only" for="inlineFormInputGroup">Username</label>
+                <div class="input-group mb-2 mr-sm-2 mb-sm-0">
+                    <div class="input-group-addon">@</div>
+                    <input type="text" class="form-control form-control-lg" id="inlineFormInputGroup" placeholder="Username">
                 </div>
-                <div class="col-sm-4"></div>
+                </form>
             </div>
+            <div id="channelsDiv"></div>
         </div>
-
-    </div>
-
-
-    <div id="content">
-
-        <div class="container-fluid">
-            <div class="row text-center">
-                <div class="col-sm-4">
-                    <img src="assets/images/owl.png" class="owls animated fadeInUpBig" alt="Drake Owl">
-                </div>
-                <div class="col-sm-4">
-                    <img src="assets/images/drake.jpg" id="profileImg" class="animated flip" alt="Me">
-
-                    <video class="animated lightSpeedIn vid" autoplay>
-                            <source src="assets/videos/Look_Alive.mp4" type="video/mp4">
-                          </video>
-                          
-                    <img src="assets/images/cross.png" class="animated wobble cross" alt="cross">
-                </div>
-                <div class="col-sm-4">
-                    <img src="assets/images/owl2.png" class="owls animated fadeInUpBig rightOwl" alt="Drake Owl">
-                </div>
-            </div>
+        <div class="col-sm-4">
+                
         </div>
-
     </div>
-
+</div>
 
 
 </body>
